fix(recipes): correct processDefinitionKey string handling in process instance query migration
- Map C7 processDefinitionKey(String) to C8 processDefinitionId(String) filter
- Add builder spec for .processDefinitionKey(...).list() chains
- Remove misleading businessKey TODO attached to processDefinitionKey

related to #2085