@@ -51,7 +51,7 @@ public class MigrateProcessInstanceQueryMethodsRecipe extends AbstractMigrationR
                 """
                 #{camundaClient:any(io.camunda.client.CamundaClient)}
                     .newProcessInstanceSearchRequest()
-                    .filter(filter -> filter.processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(java.lang.String)})))
+                    .filter(filter -> filter.processDefinitionId(#{processDefinitionKey:any(java.lang.String)}))
                 """,
                 "io.camunda.client.api.search.request.ProcessInstanceSearchRequestBuilder",
                 "io.camunda.client.api.search.filter.ProcessInstanceFilter"),
@@ -59,7 +59,7 @@ public class MigrateProcessInstanceQueryMethodsRecipe extends AbstractMigrationR
             "io.camunda.client.api.search.request.ProcessInstanceSearchRequestBuilder",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0)),
-            List.of(RecipeUtils.businessIdHint("processInstanceBusinessKey")),
+            Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList()));
   }
@@ -117,9 +117,32 @@ public class MigrateProcessInstanceQueryMethodsRecipe extends AbstractMigrationR
         List.of(RecipeUtils.businessIdHint("processInstanceBusinessKey")),
         Collections.emptyList(),
         List.of(PROCESS_INSTANCE_STATE)));
-        
 
-        
+    specs.add(new ReplacementUtils.BuilderReplacementSpec(
+        new MethodMatcher("org.camunda.bpm.engine.query.Query list()"),
+        Set.of("processDefinitionKey"),
+        List.of("processDefinitionKey"),
+        RecipeUtils.createSimpleJavaTemplate(
+            """
+            #{camundaClient:any(io.camunda.client.CamundaClient)}
+                .newProcessInstanceSearchRequest()
+                .filter(filter -> filter
+                    .processDefinitionId(#{processDefinitionKey:any(java.lang.String)})
+                    .state(ProcessInstanceState.ACTIVE))
+                .send()
+                .join()
+                .items()
+            """,
+            PROCESS_INSTANCE_STATE,
+            "io.camunda.client.api.search.response.ProcessInstance",
+            "io.camunda.client.api.search.filter.ProcessInstanceFilter"),
+        RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
+        "List<io.camunda.client.api.search.response.ProcessInstance>",
+        ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+        Collections.emptyList(),
+        Collections.emptyList(),
+        List.of(PROCESS_INSTANCE_STATE)));
+
     return specs;
   }
 
